--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
         - action: rebuild
           path: ./server/package.json
   db:
-    image: mariadb:lastest
+    image: mariadb:latest
     container_name: mariadb_server
     restart: always
     environment:
